--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dotenv": "16.0.2",
     "npm-run-all": "4.1.5",
     "svelte-preprocess": "^4.10.7",
+    "sveltekit-form": "0.1.0",
     "ua-parser-js": "1.0.2",
     "vanilla-lazyload": "17.8.3",
     "vite": "^3.0.9"
